Customer segments project submission- review comments

--- a/customer_segments/customer_segments.ipynb
+++ b/customer_segments/customer_segments.ipynb
@@ -337,6 +337,7 @@
     "* Grocery: 7951.3\n",
     "* Detergents_paper: 2881.4\n",
     "* Delicatessen: 1524.8\n",
+    "* Frozen: 3071.931818\t\n",
     "\n",
     "Knowing this, how do your samples compare? Does that help in driving your insight into what kind of establishments they might be? \n"
    ]
@@ -346,9 +347,11 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "- Establishment #0 resembles 'cafe/resturant' with fresh salads, high milk, grocery consumption. The high spending on detergents_paper category is needed for the cafes to supply paper demand.\n",
-    "- Establishment #1 resembles 'small size store' with emphasis on cold cuts/delicatessen and has average spending needs on rest of the categories without stocking up like a major wholesaler. \n",
-    "- Establishment #2 resembles 'fresh market' with focus on fresh produce and frozen products. There is a little stock of other categories to meet adhoc customers."
+    "- Establishment #0 resembles 'cafe/resturant' with fresh salads, high milk, grocery consumption. The high spending on detergents_paper category is needed for the cafes to supply paper demand. Fresh category is close to the mean, whereas Milk, Paper and Grocery are well above the 75th percentile with Frozen being in 25th percentile suggesting a cafe/resturant with fresh offerings.\n",
+    "\n",
+    "- Establishment #1 resembles 'small size store' with emphasis on cold cuts/delicatessen and has average spending needs on other categories without stocking up like a major wholesaler. Except the Delicatessen which is way above 75th percentile all other categories seems to be lingering around mean stat.\n",
+    "\n",
+    "- Establishment #2 resembles 'fresh market' with focus on fresh produce and frozen products. There is a little stock of other categories to meet adhoc customers. The Fresh,Frozen category spending is way above 75th percentile justifying the assesment. Other categories are well below the mean stat."
    ]
   },
   {
@@ -2440,7 +2443,9 @@
     "1) Supermarkets\n",
     "2) Cafes/Resturant\n",
     "\n",
-    "The variant of A/B testing in this scenario is delivery frequencey. The wholesale distributor wants to identify which customer segment would react positively to 3 days a week delivery and who would prefer 5 days a week delivery. As the distributor wants to change only to postive reacting customers, running a simple feedback campaign on the order procuremnet web application which the customers frequently use will help the distributor identify the customers in favor of 3 days delivery service. \n",
+    "The variant of A/B testing in this scenario is delivery frequency. The wholesale distributor wants to identify which customer segment would react positively to 3 days a week delivery and who would prefer 5 days a week delivery. As the distributor wants to change only to postive reacting customers, running a simple feedback campaign on the order procuremnet web application which the customers frequently use will help the distributor identify the customers in favor of 3 days delivery service. \n",
+    "\n",
+    "To determine this, for each cluster generated we take a subset of data points to act as participants to the A/B test. Portion of the data points are tried with new three day delivery frequency and the remaining data points are kept on the old delivery frequency. We then guage the reaction of two sets customers from the same cluster; which untlimately will assist the wholesale distributor to predict how all customers in each cluster would react to the change in delivery frequency.\n",
     "\n",
     "Going by the segments created, supermarkets will probably stock up and might be okay with 3 days a week delivery sevice. On the other hand, cafe/resturant segment will need to keep fresh stock which indirectly drives positive feedback on its service - so they might not be positive about 3 days a week delivery.\n"
    ]
